# website

./: .gitignore  404.html  Makefile  README.md  _config.yml  articles.html  index.html  privacy.html  sonar-project.properties
.github/workflows/: CICD.yml  continuous-integration-and-deployment.yml
_includes/: footer.html  head.html  masthead-large.html  navigation.html  scripts.html
_layouts/: default.html  home.html
_sass/: overrides.scss
assets/javascript/: main.js
azure_function_apps/ContactFormHttpTrigger/: function_app.py  helpers.py  host.json  pyproject.toml  requirements.txt  test_helpers.py
css/: import.scss
javascript/: main.js
jekyll/: .gitignore  Gemfile  _config.yml  index.html  privacy.html  site.webmanifest  why.md
jekyll/_includes/: footer.html  masthead-large.html  masthead-small.html  scripts.html
jekyll/_layouts/: article.html
jekyll/assets/css/: import.scss
jekyll/assets/javascript/: main.js
